Fix armeria