@@ -53,10 +53,18 @@ dependencies {
 group = "org.kotlin.community"
 version = "0.1-SNAPSHOT"
 description = "http-benchmark"
-java.sourceCompatibility = JavaVersion.VERSION_17
+java.sourceCompatibility = JavaVersion.VERSION_20
 
 tasks.withType<JavaCompile> {
   options.encoding = "UTF-8"
+}
+
+tasks.withType<JavaCompile>().configureEach {
+  options.compilerArgs.add("--enable-preview")
+}
+
+jmh {
+  jvmArgs.add("--enable-preview")
 }
 
 tasks {
